Finished devise and updated views

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<h1>Niccit</h1>
+<<h2>a Reddit clone riding on Rails 4</h2>
+<p>Created by Nicholas Shawn Nadel</p>
